--- a/Linear regression (SPY and COVID).ipynb
+++ b/Linear regression (SPY and COVID).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "07344c88",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "6eca3840",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "07643df0",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "0.968659686018521"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "2f104a25",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
        "max    4793.060000  4841.164043"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "bfb00f5a",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "7f6921eb",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
        "[2742 rows x 9 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "3fbaad18",
    "metadata": {},
    "outputs": [],
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "1d1c8625",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "[2742 rows x 3 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "ea34de3e",
    "metadata": {},
    "outputs": [],
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "8546b742",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
        "[457 rows x 9 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "7234b7e4",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "fbb10efe",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "62e3ecb8",
    "metadata": {},
    "outputs": [],
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "id": "a2599b9a",
    "metadata": {},
    "outputs": [],
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "903a8442",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1223,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "e09e3219",
    "metadata": {},
    "outputs": [],
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "id": "50a13ede",
    "metadata": {},
    "outputs": [
@@ -1252,7 +1252,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mx/ddl26rl54v52bn8d6n665nl00000gn/T/ipykernel_34446/3136643248.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/mx/ddl26rl54v52bn8d6n665nl00000gn/T/ipykernel_40445/3136643248.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "id": "7becee9d",
    "metadata": {},
    "outputs": [
@@ -1292,7 +1292,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mx/ddl26rl54v52bn8d6n665nl00000gn/T/ipykernel_34446/627509719.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/mx/ddl26rl54v52bn8d6n665nl00000gn/T/ipykernel_40445/627509719.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "id": "53ddaea7",
    "metadata": {},
    "outputs": [],
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "id": "1e0f6f76",
    "metadata": {},
    "outputs": [
@@ -1448,7 +1448,7 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "id": "726b25a6",
    "metadata": {},
    "outputs": [
@@ -1469,13 +1469,31 @@
        "0.5873461231926973"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r2_score(y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d765ff34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "where m = 0.03 and b = 31.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"where m =\", round(model.coef_[0],2), \"and b =\", round(model.intercept_,2))"
    ]
   },
   {
@@ -1490,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "id": "aa7584ec",
    "metadata": {},
    "outputs": [],
@@ -1500,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "id": "2d7ce5e8",
    "metadata": {},
    "outputs": [],
@@ -1510,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "id": "7af93740",
    "metadata": {},
    "outputs": [],
@@ -1520,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "id": "1ff989cf",
    "metadata": {},
    "outputs": [
@@ -1530,7 +1548,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "id": "3e756e9a",
    "metadata": {},
    "outputs": [],
@@ -1551,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "id": "625520d4",
    "metadata": {},
    "outputs": [],
@@ -1561,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "id": "4be391da",
    "metadata": {},
    "outputs": [
@@ -1571,7 +1589,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "id": "c8f9ae74",
    "metadata": {},
    "outputs": [],
@@ -1592,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "id": "d8c2e22e",
    "metadata": {},
    "outputs": [
@@ -1620,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 43,
    "id": "2eb2371d",
    "metadata": {},
    "outputs": [],
@@ -1630,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 44,
    "id": "15b4bfa1",
    "metadata": {},
    "outputs": [
@@ -1761,7 +1779,7 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1772,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 45,
    "id": "fca490e1",
    "metadata": {},
    "outputs": [
@@ -1782,13 +1800,31 @@
        "0.5801860876010085"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r2_score(y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "d9913d5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "where m = 0.4 and b = 52.71\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"where m =\", round(model.coef_[0],2), \"and b =\", round(model.intercept_,2))"
    ]
   },
   {
@@ -1803,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 47,
    "id": "e888b071",
    "metadata": {},
    "outputs": [],
@@ -1814,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
    "id": "81e8ce58",
    "metadata": {},
    "outputs": [
@@ -1824,7 +1860,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1836,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 49,
    "id": "4a1d8bff",
    "metadata": {},
    "outputs": [
@@ -1846,7 +1882,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1859,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 50,
    "id": "d83ee9c6",
    "metadata": {},
    "outputs": [],
@@ -1869,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 51,
    "id": "e6a26ff3",
    "metadata": {},
    "outputs": [
@@ -1897,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 52,
    "id": "550fefdf",
    "metadata": {},
    "outputs": [
@@ -2028,7 +2064,7 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2036,6 +2072,45 @@
    "source": [
     "MRNA_df[\"Pred_Price\"]=y_pred\n",
     "MRNA_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "522ab642",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7699330613888375"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "1e88c9cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "where m = 0.77 and b = -7.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"where m =\", round(model.coef_[0],2), \"and b =\", round(model.intercept_,2))"
    ]
   },
   {
@@ -2050,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 55,
    "id": "af7de31c",
    "metadata": {},
    "outputs": [
@@ -2060,7 +2135,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2074,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 56,
    "id": "48fe35fd",
    "metadata": {},
    "outputs": [],
@@ -2087,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 57,
    "id": "986d5823",
    "metadata": {},
    "outputs": [
@@ -2115,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 58,
    "id": "f6fe59cc",
    "metadata": {},
    "outputs": [
@@ -2246,7 +2321,7 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2258,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 59,
    "id": "0d8873d9",
    "metadata": {},
    "outputs": [
@@ -2268,13 +2343,31 @@
        "0.6782375616206711"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r2_score(y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "9e66d58a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "where m = 0.07 and b = 140.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"where m =\", round(model.coef_[0],2), \"and b =\", round(model.intercept_,2))"
    ]
   },
   {
@@ -2289,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 61,
    "id": "f72ed748",
    "metadata": {},
    "outputs": [
@@ -2299,7 +2392,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2313,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 62,
    "id": "a44f455d",
    "metadata": {},
    "outputs": [],
@@ -2326,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 63,
    "id": "f8c16223",
    "metadata": {},
    "outputs": [
@@ -2354,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 64,
    "id": "ee30c932",
    "metadata": {},
    "outputs": [
@@ -2485,7 +2578,7 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2497,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 65,
    "id": "8c405ab3",
    "metadata": {},
    "outputs": [
@@ -2507,13 +2600,31 @@
        "0.7946278496901718"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r2_score(y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "60f81078",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "where m = 0.69 and b = -1.18\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"where m =\", round(model.coef_[0],2), \"and b =\", round(model.intercept_,2))"
    ]
   },
   {
@@ -2528,7 +2639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 67,
    "id": "4573d52e",
    "metadata": {},
    "outputs": [
@@ -2538,7 +2649,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2552,7 +2663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 68,
    "id": "e0ae880c",
    "metadata": {},
    "outputs": [],
@@ -2565,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 69,
    "id": "e86370f2",
    "metadata": {},
    "outputs": [
@@ -2593,7 +2704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 70,
    "id": "654591b9",
    "metadata": {},
    "outputs": [
@@ -2724,7 +2835,7 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2736,7 +2847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 71,
    "id": "5780a9ac",
    "metadata": {},
    "outputs": [
@@ -2746,13 +2857,31 @@
        "0.35192099622252915"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r2_score(y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "96a05501",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "where m = 0.02 and b = 49.68\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"where m =\", round(model.coef_[0],2), \"and b =\", round(model.intercept_,2))"
    ]
   },
   {
