--- a/Linear regression (SPY and COVID).ipynb
+++ b/Linear regression (SPY and COVID).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "07344c88",
    "metadata": {},
    "outputs": [],
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "bfb00f5a",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "7f6921eb",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
        "[2742 rows x 9 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "3fbaad18",
    "metadata": {},
    "outputs": [],
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "1d1c8625",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "[2742 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "ea34de3e",
    "metadata": {},
    "outputs": [],
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "8546b742",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
        "[457 rows x 9 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "7234b7e4",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "fbb10efe",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "62e3ecb8",
    "metadata": {},
    "outputs": [],
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "a2599b9a",
    "metadata": {},
    "outputs": [],
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "903a8442",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1223,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "e09e3219",
    "metadata": {},
    "outputs": [],
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "50a13ede",
    "metadata": {},
    "outputs": [
@@ -1252,7 +1252,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mx/ddl26rl54v52bn8d6n665nl00000gn/T/ipykernel_40445/3136643248.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/mx/ddl26rl54v52bn8d6n665nl00000gn/T/ipykernel_44099/3136643248.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "7becee9d",
    "metadata": {},
    "outputs": [
@@ -1292,7 +1292,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mx/ddl26rl54v52bn8d6n665nl00000gn/T/ipykernel_40445/627509719.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/mx/ddl26rl54v52bn8d6n665nl00000gn/T/ipykernel_44099/627509719.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "53ddaea7",
    "metadata": {},
    "outputs": [],
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "1e0f6f76",
    "metadata": {},
    "outputs": [
@@ -1448,13 +1448,23 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "PFE_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a6662f74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "see=mean_squared_error(y,y_pred)**(1/2)"
    ]
   },
   {
@@ -1498,6 +1508,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "800730d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.008066026532217831"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_test=0.03/see\n",
+    "t_test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "id": "7ac19932",
    "metadata": {},
@@ -1508,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "aa7584ec",
    "metadata": {},
    "outputs": [],
@@ -1518,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "2d7ce5e8",
    "metadata": {},
    "outputs": [],
@@ -1528,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "7af93740",
    "metadata": {},
    "outputs": [],
@@ -1538,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "1ff989cf",
    "metadata": {},
    "outputs": [
@@ -1548,7 +1580,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "3e756e9a",
    "metadata": {},
    "outputs": [],
@@ -1569,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "625520d4",
    "metadata": {},
    "outputs": [],
@@ -1579,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "4be391da",
    "metadata": {},
    "outputs": [
@@ -1589,7 +1621,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1600,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "c8f9ae74",
    "metadata": {},
    "outputs": [],
@@ -1610,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "d8c2e22e",
    "metadata": {},
    "outputs": [
@@ -1638,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "id": "2eb2371d",
    "metadata": {},
    "outputs": [],
@@ -1648,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "15b4bfa1",
    "metadata": {},
    "outputs": [
@@ -1779,7 +1811,7 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "fca490e1",
    "metadata": {},
    "outputs": [
@@ -1800,7 +1832,7 @@
        "0.5801860876010085"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1811,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "d9913d5e",
    "metadata": {},
    "outputs": [
@@ -1829,6 +1861,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "id": "0c704138",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "see=mean_squared_error(y,y_pred)**(1/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "cc0ff238",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0006651794810424616"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_test=0.03/see\n",
+    "t_test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 70,
    "id": "ad73e523",
    "metadata": {},
@@ -1839,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "id": "e888b071",
    "metadata": {},
    "outputs": [],
@@ -1850,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "id": "81e8ce58",
    "metadata": {},
    "outputs": [
@@ -1860,7 +1924,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "id": "4a1d8bff",
    "metadata": {},
    "outputs": [
@@ -1882,7 +1946,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1895,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "id": "d83ee9c6",
    "metadata": {},
    "outputs": [],
@@ -1905,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "id": "e6a26ff3",
    "metadata": {},
    "outputs": [
@@ -1933,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "id": "550fefdf",
    "metadata": {},
    "outputs": [
@@ -2064,7 +2128,7 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2076,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "id": "522ab642",
    "metadata": {},
    "outputs": [
@@ -2086,7 +2150,7 @@
        "0.7699330613888375"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2097,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "id": "1e88c9cc",
    "metadata": {},
    "outputs": [
@@ -2115,6 +2179,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "id": "b621793a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "see=mean_squared_error(y,y_pred)**(1/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "9b7a8ef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0005386243222078712"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_test=0.03/see\n",
+    "t_test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "id": "73230bed",
    "metadata": {},
@@ -2125,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "id": "af7de31c",
    "metadata": {},
    "outputs": [
@@ -2135,7 +2231,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2149,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "id": "48fe35fd",
    "metadata": {},
    "outputs": [],
@@ -2162,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "id": "986d5823",
    "metadata": {},
    "outputs": [
@@ -2190,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "id": "f6fe59cc",
    "metadata": {},
    "outputs": [
@@ -2321,7 +2417,7 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2333,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 66,
    "id": "0d8873d9",
    "metadata": {},
    "outputs": [
@@ -2343,7 +2439,7 @@
        "0.6782375616206711"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2354,7 +2450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 67,
    "id": "9e66d58a",
    "metadata": {},
    "outputs": [
@@ -2372,6 +2468,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "id": "76bdd7b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "see=mean_squared_error(y,y_pred)**(1/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "73d210d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004591123484684124"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_test=0.03/see\n",
+    "t_test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 72,
    "id": "4c454c58",
    "metadata": {},
@@ -2382,7 +2510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 70,
    "id": "f72ed748",
    "metadata": {},
    "outputs": [
@@ -2392,7 +2520,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2406,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "id": "a44f455d",
    "metadata": {},
    "outputs": [],
@@ -2419,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "id": "f8c16223",
    "metadata": {},
    "outputs": [
@@ -2447,7 +2575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "id": "ee30c932",
    "metadata": {},
    "outputs": [
@@ -2578,7 +2706,7 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2590,7 +2718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "id": "8c405ab3",
    "metadata": {},
    "outputs": [
@@ -2600,7 +2728,7 @@
        "0.7946278496901718"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2611,7 +2739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 75,
    "id": "60f81078",
    "metadata": {},
    "outputs": [
@@ -2629,6 +2757,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "id": "529f74fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "see=mean_squared_error(y,y_pred)**(1/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "07bac844",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0006515425371281319"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_test=0.03/see\n",
+    "t_test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "id": "3da93e45",
    "metadata": {},
@@ -2639,7 +2799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "id": "4573d52e",
    "metadata": {},
    "outputs": [
@@ -2649,7 +2809,7 @@
        "(457, 1)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2663,7 +2823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "id": "e0ae880c",
    "metadata": {},
    "outputs": [],
@@ -2676,7 +2836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "id": "e86370f2",
    "metadata": {},
    "outputs": [
@@ -2704,7 +2864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "id": "654591b9",
    "metadata": {},
    "outputs": [
@@ -2835,7 +2995,7 @@
        "[457 rows x 4 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2847,7 +3007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "id": "5780a9ac",
    "metadata": {},
    "outputs": [
@@ -2857,7 +3017,7 @@
        "0.35192099622252915"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2868,7 +3028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "id": "96a05501",
    "metadata": {},
    "outputs": [
@@ -2882,6 +3042,38 @@
    ],
    "source": [
     "print(\"where m =\", round(model.coef_[0],2), \"and b =\", round(model.intercept_,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "daaa1969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "see=mean_squared_error(y,y_pred)**(1/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "e7246db4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.008377726822187905"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_test=0.03/see\n",
+    "t_test"
    ]
   },
   {
