Add correlation to covid_population

--- a/covid_population.ipynb
+++ b/covid_population.ipynb
@@ -1990,12 +1990,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44e4b4f6-d9a2-45dc-84b9-cc3fd56fbe69",
+   "cell_type": "markdown",
+   "id": "9172b368-3a1d-4e5b-b178-3cc503087107",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Ignore. Covid and spx are repeated companies"
+   ]
   },
   {
    "cell_type": "code",
